# ugc_sprint_2

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  README_TASK.md  docker-compose-local.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: python.yml
data/node1/: config.xml
data/node2/: config.xml
data/node3/: config.xml
data/node4/: config.xml
etl/: Dockerfile  README.md  db_filling.ddl  elt_start.py  logger.py  requirements.txt
etl/src_etl/: .env  backoff.py  etl_settings.py  read_from_kafka.py  write_to_clickhouse.py
etl/src_etl/models/: kafka_message.py
ugc_service/app/: Dockerfile  entrypoint.sh  requirements.txt
ugc_service/app/src/: main.py  settings.py
ugc_service/app/src/api/v1/: auth.py  film_views.py  user_actions.py
ugc_service/app/src/db/: auth_utils.py  kafka_utils.py  mongo_utils.py
ugc_service/app/src/models/: data.py  login.py
ugc_service/app/src/services/: auth_login.py  film_send_views.py  user_actions.py
ugc_service/env/: .docker.env  .local.env
ugc_service/nginx/: Dockerfile  nginx.conf  ugc_service.conf
